user page styling

--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@
   --text-color: #006719;
   --footer-border-bottom-color: #4c9bb6;
   --video-player-bg: #195571;
-  --user-form-bg: #c9eeff;
+  --user-form-bg: #fffcdf;
 
   /* For Webkit browsers (Chrome, Safari, etc)  */
   ::-webkit-scrollbar {
