feature/build-29-03: remove dashboard from leftnav

--- a/src/index.css
+++ b/src/index.css
@@ -214,7 +214,7 @@
 
   @media screen and (max-width: 768px) {
     #user-content {
-      background: #fbfafa;
+      background: var(--user-form-bg);
     }
   }
 }
